--- a/events/a-right-proper-drink-and-draw.html
+++ b/events/a-right-proper-drink-and-draw.html
@@ -100,7 +100,7 @@
     <header class="site-header bg-white pa3">
   <nav class="flex flex-row items-center">
     <div class="site-header__logo">
-      <a class="ma0" href="./index.html">
+      <a class="ma0" href="/">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="172" height="48">
           <defs>
             <path id="a" d="M.071.07h38.485v32.578H.071z" />
