--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <ul class="mobile-menu__list list ma0 pl0 ma4">
 
     <li class="mobile-menu__item list-none">
-      <a href="/events/index.html" class="monospace ttu white pb3 db">Events</a>
+      <a href="/events/" class="monospace ttu white pb3 db">Events</a>
     </li>
 
     <li class="mobile-menu__item list-none">
@@ -134,40 +134,41 @@
       <ul class="list flex-auto ma0 pl0 dn db-l tr">
 
         <li class="dib link">
-          <a href="./events/index.html" class="btn btn--header-link">
+          <a href="/events/" class="btn btn--header-link">
             Events
           </a>
         </li>
 
         <li class="dib link">
-          <a href="./map/index.html" class="btn btn--header-link">
+          <a href="/map/" class="btn btn--header-link">
             Map
           </a>
         </li>
 
         <li class="dib link">
-          <a href="./pop-up-shop/index.html" class="btn btn--header-link">
+          <a href="/pop-up-shop/" class="btn btn--header-link">
             Pop Up Shop
           </a>
         </li>
 
         <li class="dib link">
-          <a href="./about/index.html" class="btn btn--header-link">
+          <a href="/about/" class="btn btn--header-link">
             About
           </a>
         </li>
 
         <li class="dib link">
-          <a href="./sponsors/index.html" class="btn btn--header-link">
+          <a href="/sponsors/" class="btn btn--header-link">
             Sponsors
           </a>
         </li>
 
         <li class="dib link">
-          <a href="./volunteer/index.html" class="btn btn--header-link">
+          <a href="/volunteer/" class="btn btn--header-link">
             Volunteer
           </a>
         </li>
+
       </ul>
 
       <div class="site-header__menu-button flex-auto fr db dn-l">
