--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -68,27 +68,27 @@
   <ul class="mobile-menu__list list ma0 pl0 ma4">
 
     <li class="mobile-menu__item list-none">
-      <a href="../events/index.html" class="monospace ttu white pb3 db">Events</a>
+      <a href="/events/" class="monospace ttu white pb3 db">Events</a>
     </li>
 
     <li class="mobile-menu__item list-none">
-      <a href="../map/index.html" class="monospace ttu white pb3 db">Map</a>
+      <a href="/map/" class="monospace ttu white pb3 db">Map</a>
     </li>
 
     <li class="mobile-menu__item list-none">
-      <a href="../pop-up-shop/index.html" class="monospace ttu white pb3 db">Pop Up Shop</a>
+      <a href="/pop-up-shop/" class="monospace ttu white pb3 db">Pop Up Shop</a>
     </li>
 
     <li class="mobile-menu__item list-none">
-      <a href="../about/index.html" class="monospace ttu white pb3 db">About</a>
+      <a href="/about/" class="monospace ttu white pb3 db">About</a>
     </li>
 
     <li class="mobile-menu__item list-none">
-      <a href="./" class="monospace ttu white pb3 db">Sponsors</a>
+      <a href="/sponsors/" class="monospace ttu white pb3 db">Sponsors</a>
     </li>
 
     <li class="mobile-menu__item list-none">
-      <a href="../volunteer/index.html" class="monospace ttu white pb3 db">Volunteer</a>
+      <a href="/volunteer/" class="monospace ttu white pb3 db">Volunteer</a>
     </li>
 
   </ul>
@@ -100,7 +100,7 @@
     <header class="site-header bg-white pa3">
   <nav class="flex flex-row items-center">
     <div class="site-header__logo">
-      <a class="ma0" href="../index.html">
+      <a class="ma0" href="/">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="172" height="48">
           <defs>
             <path id="a" d="M.071.07h38.485v32.578H.071z" />
@@ -134,37 +134,37 @@
       <ul class="list flex-auto ma0 pl0 dn db-l tr">
 
         <li class="dib link">
-          <a href="../events/index.html" class="btn btn--header-link">
+          <a href="/events/" class="btn btn--header-link">
             Events
           </a>
         </li>
 
         <li class="dib link">
-          <a href="../map/index.html" class="btn btn--header-link">
+          <a href="/map/" class="btn btn--header-link">
             Map
           </a>
         </li>
 
         <li class="dib link">
-          <a href="../pop-up-shop/index.html" class="btn btn--header-link">
+          <a href="/pop-up-shop/" class="btn btn--header-link">
             Pop Up Shop
           </a>
         </li>
 
         <li class="dib link">
-          <a href="../about/index.html" class="btn btn--header-link">
+          <a href="/about/" class="btn btn--header-link">
             About
           </a>
         </li>
 
         <li class="dib link">
-          <a href="./" class="btn btn--header-link">
+          <a href="/sponsors/" class="btn btn--header-link">
             Sponsors
           </a>
         </li>
 
         <li class="dib link">
-          <a href="../volunteer/index.html" class="btn btn--header-link">
+          <a href="/volunteer/" class="btn btn--header-link">
             Volunteer
           </a>
         </li>
