--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
 </nav>
 
 <body>
+    <span class="pa3 bg-black fixed top-0 left-0 right-0 tc white" style="z-index: 9999">
+  <h2 class="dib f6 ma0">You are currently viewing the 2018 DC Design Week Website.</h2>
+  <a class="white fw-bold ma0 f6" href="https://github.com/AIGAdc/DCDW" target="_blank"><p class="dib f6 ma0">For the latest version, checkout Github</p></a>
+</span>
+  <span class="pa3 bg-black fixed top-0 left-0 right-0 tc white" style="z-index: 9999">
+  <h2 class="dib f6 ma0">You are currently viewing the 2018 DC Design Week Website.</h2>
+  <a class="white fw-bold ma0 f6" href="https://github.com/AIGAdc/DCDW" target="_blank"><p class="dib f6 ma0">For the latest version, checkout Github</p></a>
+</span>
   <!-- wrapper for site content that is shifted when mobile menu is triggered -->
   <div id="site-container" class="">
     <header class="site-header bg-white pa3">
